--- a/style.css
+++ b/style.css
@@ -29,3 +29,18 @@ nav a {
 nav:first-child {
     border-left: 0 none;
 }
+
+#maincontainer{
+    padding-top: 130px;
+}
+
+.main-section{
+    float: left;
+    width: 100%;
+    max-width: 650;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #fff;
+    border: 1px solid #ddd;
+    
+}
