--- a/style.css
+++ b/style.css
@@ -44,3 +44,34 @@ nav:first-child {
     border: 1px solid #ddd;
     
 }
+
+.auth-image{
+    float: left;
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+}
+.sidebar{
+    float: right;
+    width: 200px;
+    max-width: 270px;
+    padding: 30px;
+    margin-bottom: 20px;
+    background: #fff;
+    border: 1px solid #ddd;
+}
+
+h3, .sidebar h2{
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+    border-bottom: 2px solid yellow;
+}
+
+.social{
+    width: 62px;
+    height: 62px;
+    margin-top: 8px;
+    margin-right: 5px;
+}
