--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ nav a {
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
-    color: #999;
+    color: gold;
     text-decoration: none;
-    border-left: 1px solid gray;
+    border-left: 1px solid aqua;
 }
 
 nav:first-child {
@@ -40,7 +40,7 @@ nav:first-child {
     max-width: 650;
     padding: 30px;
     margin: 0 0 40px;
-    background: #fff;
+    background: turquoise;
     border: 1px solid #ddd;
     
 }
@@ -59,7 +59,7 @@ nav:first-child {
     padding: 30px;
     margin-bottom: 20px;
     background: #fff;
-    border: 1px solid #ddd;
+    border: 1px solid black;
 }
 
 h3, .sidebar h2{
@@ -74,4 +74,13 @@ h3, .sidebar h2{
     height: 62px;
     margin-top: 8px;
     margin-right: 5px;
+}
+footer{
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: yellow;
+    text-align: center;
+    background: black;
+    border-top: 8px solid red;
 }
