i need a lot of shit

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav:first-child {
     padding-top: 130px;
 }
 
-.main-section{
+.main-section {
     float: left;
     width: 100%;
     max-width: 650;
@@ -45,14 +45,14 @@ nav:first-child {
     
 }
 
-.auth-image{
+.auth-image {
     float: left;
     width: 200px;
     height: auto;
     margin-top: 10px;
     margin-right: 25px;
 }
-.sidebar{
+.sidebar {
     float: right;
     width: 200px;
     max-width: 270px;
@@ -62,20 +62,29 @@ nav:first-child {
     border: 1px solid black;
 }
 
-h3, .sidebar h2{
+h3, .sidebar h2 {
     padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
     border-bottom: 2px solid yellow;
 }
 
-.social{
+.social {
     width: 62px;
     height: 62px;
     margin-top: 8px;
     margin-right: 5px;
 }
-footer{
+
+.work {
+    position: relative;
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
+}
+
+footer {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
