--- a/style.css
+++ b/style.css
@@ -1,19 +1,86 @@
-#masthead {
-    position: fixed;
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;
-    color: hotpink;
-    background: lightgreen;
-    border-bottom: 2px solid #ccc;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: black;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+/* general */
 .container {
     width: 100%;
     max-width: 960px;
     margin: 0 auto;
     clear: both;
+}
 
+h1,
+h2, 
+h3,
+p {
+    margin-bottom: 20px;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
+h1,
+h2,
+h3 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
+    color: rgb(6, 231, 156)
+}
+
+h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid rgb(156, 138, 136);
+}
+
+h2,
+h3 {
+    font-size: 22px;
+}
+
+/* header */
+#masthead {
+    position: fixed;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: white;
+    background: rgb(192, 6, 130);
+    border-bottom: 2px solid #ccc;
+}
+
+#nameArt {
+    float: left;
+    width: 250px;
+    height: 90px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: darkmagenta;
+    text-align: center;
+    text-decoration: none;
+    background: magenta;
+}
+
+.container a {
+    text-decoration: none;
+    color: white;
+}
+
+nav {
+    float: right;
+    margin-top: 25px;
 }
 
 nav a {
@@ -21,44 +88,40 @@ nav a {
     padding-left: 15px;
     margin-left: 15px;
     line-height: 18px;
-    color: gold;
+    color: white;
     text-decoration: none;
-    border-left: 1px solid aqua;
+    border-left: 1px solid rgb(168, 157, 6);
 }
 
-nav:first-child {
+nav a: first-child {
     border-left: 0 none;
 }
 
-#maincontainer {
+/* main */
+#main-container {
     padding-top: 130px;
 }
 
 .main-section {
     float: left;
     width: 100%;
-    max-width: 650;
+    max-width: 650px;
     padding: 30px;
     margin: 0 0 40px;
-    background: turquoise;
-    border: 1px solid #ddd;
-    
+    background: #fff;
+    border: 1px solid rgb(24, 39, 1);
 }
 
-.auth-image {
-    float: left;
-    width: 200px;
-    height: auto;
-    margin-top: 10px;
-    margin-right: 25px;
-}
+
+
+/* sidebar */
 .sidebar {
     float: right;
-    width: 200px;
-    max-width: 270px;
-    padding: 30px;
+    width: 100%;
+    max-width:270px;
+    padding:30px;
     margin-bottom: 20px;
-    background: #fff;
+    background: yellow;
     border: 1px solid black;
 }
 
@@ -66,7 +129,7 @@ h3, .sidebar h2 {
     padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
-    border-bottom: 2px solid yellow;
+    border-bottom: 2px solid  rgb(197, 83, 107);
 }
 
 .social {
@@ -76,6 +139,7 @@ h3, .sidebar h2 {
     margin-right: 5px;
 }
 
+/* portfolio page */
 .work {
     position: relative;
     float: left;
@@ -84,11 +148,84 @@ h3, .sidebar h2 {
     overflow: auto;
 }
 
+.work:nth-child(even) {
+    margin-right: 40px;
+}
+
+.work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+}
+
+.work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: purple;
+    text-align: center;
+    background: aqua;
+    border-bottom: 0;
+}
+
+.auth-image {
+    float: left;
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+}
+
+/* contact page */
+#contact-form ul {
+    margin-bottom: 20px;
+}
+
+#contact-form li {
+    margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+    display: block;
+    width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid rgb(54, 37, 54);
+}
+
+textarea {
+    height: 200px;
+}
+
+input[type=submit] {
+    padding: 10px 30px;
+    font-size: 18px;
+    color: rgb(209, 209, 153);
+    cursor: pointer;
+    background: rgb(57, 27, 128);
+    border: 0 none;
+}
+
+
+/* footer */
 footer {
     padding: 30px 0;
     clear: both;
     font-size: 12px;
-    color: yellow;
+    color: orange;
     text-align: center;
     background: black;
     border-top: 8px solid red;
